Implemented basic authentication

--- a/public/jquery/index.html
+++ b/public/jquery/index.html
@@ -10,6 +10,7 @@
         table, td {
             border: black solid 1px;
             border-collapse: collapse;
+            padding: 3px;
         }
 
         thead {
@@ -20,8 +21,14 @@
 </head>
 <body>
 
+<h1>ID: <span id="windengineID"></span></h1>
+<h1>Time: <span id="timestamp"></span></h1>
+
 <table id="table">
-<thead><td>Attribute</td><td>Value</td></thead>
+    <tr>
+        <th>Attribute</th>
+        <th>Value</th>
+    </tr>
 </table>
 
 </body>
